syntax = "proto3";
package permission;

option go_package = "nfxid/protos/gen/access/permission;permissionpb";

import "google/protobuf/timestamp.proto";

// 权限信息
message Permission {
  string id = 1;                  // 权限ID (UUID)
  string key = 2;                 // 唯一键 (varchar(255))
  string name = 3;                // 权限名称 (varchar(255))
  optional string description = 4; // 描述 (text)
  bool is_system = 5;             // 是否系统权限
  google.protobuf.Timestamp created_at = 6;          // 创建时间
  google.protobuf.Timestamp updated_at = 7;          // 更新时间
  optional google.protobuf.Timestamp deleted_at = 8; // 软删除时间
}

// Permission 服务 - 供其他服务通过 gRPC 管理权限
service PermissionService {
  // 根据ID获取权限
  rpc GetPermissionByID (GetPermissionByIDRequest) returns (GetPermissionByIDResponse);
  
  // 根据Key获取权限
  rpc GetPermissionByKey (GetPermissionByKeyRequest) returns (GetPermissionByKeyResponse);
  
  // 获取所有权限列表
  rpc GetAllPermissions (GetAllPermissionsRequest) returns (GetAllPermissionsResponse);
  
  // 批量获取权限
  rpc BatchGetPermissions (BatchGetPermissionsRequest) returns (BatchGetPermissionsResponse);
}

// Permission Service Messages
message GetPermissionByIDRequest {
  string id = 1;
}

message GetPermissionByIDResponse {
  Permission permission = 1;
}

message GetPermissionByKeyRequest {
  string key = 1;
}

message GetPermissionByKeyResponse {
  Permission permission = 1;
}

message GetAllPermissionsRequest {
  optional bool is_system = 1;
}

message GetAllPermissionsResponse {
  repeated Permission permissions = 1;
}

message BatchGetPermissionsRequest {
  repeated string ids = 1;
}

message BatchGetPermissionsResponse {
  repeated Permission permissions = 1;
}
